Fixed pure-g-gutter overflow issue, added missing text utils classes

--- a/sass/layout/_layout.sass
+++ b/sass/layout/_layout.sass
@@ -16,8 +16,8 @@
     +l-wrapper-width()
 
 .content
-    margin-left: 12px
-    margin-right: 12px
+    margin-left: $siz-general-margin/2
+    margin-right: $siz-general-margin/2
     +bp-lg
         margin-left: 0
         margin-right: 0
