--- a/sass/utils/_text.sass
+++ b/sass/utils/_text.sass
@@ -34,6 +34,12 @@
 .text-primary
     color: $cl-primary
 
+.text-secondary
+    color: $cl-text-secondary
+
+.text-muted
+    color: $cl-text-muted
+
 .pull-right
     float: right
 
